# DA-2

./: .gitignore  README.md  app.py  eval.py  eval.sh  infer.py  infer.sh
configs/: eval.json  infer.json
configs/accelerate/: 1.yaml  2.yaml  3.yaml  5.yaml  6.yaml  7.yaml
eval/datasets/: base_depth_dataset.py  matterport3d_dataset.py  panosuncg_dataset.py  stanford2d3ds_dataset.py
eval/datasets/splits/: 2d3ds.txt
eval/utils/: infer.py
src/: pyproject.toml
src/da2/: __init__.py
src/da2/model/: __init__.py  base.py  sphere.py  spherevit.py  vit_w_esphere.py
src/da2/model/dinov2/: __init__.py  dinovit.py
src/da2/utils/: __init__.py  base.py  d2pc.py  io.py  model.py  vis.py
