[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "da2"
version = "0.1.0"
description = "For the implementation of DA^2: Depth Anything in Any Direction"
authors = [
  { name="H. Li", email="hal211@ucsd.edu" }
]
dependencies = [
    "torch==2.5.0",
    "torchvision==0.20.0",
    "torchaudio==2.5.0",
    "xformers==0.0.28.post2",
    "diffusers==0.32.0",
    "tensorboard==2.18.0",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3913c65d81e05e47b9f367250cf8c0f7462a0900",
    "opencv-python==4.12.0.88",
    "gradio==5.49.0",
    "gradio-client==1.13.3",
    "gradio-imageslider==0.0.20",
    "accelerate==1.1.1",
    "omegaconf==2.3.0",
    "tabulate==0.9.0",
    "einops==0.8.0",
    "timm==1.0.15",
    "trimesh==4.5.2",
    "transformers==4.46.3",
    "matplotlib==3.9.2"
]

[tool.setuptools.packages.find]
where = ["."]